--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,50 @@
-.profile-pic {
-  height: 33px;
-  width: 33px;
-  margin-left: 20px;
+input{
+  width: 95%
+}
+.Blog_Info
+{
+  display: grid;
+  
+  grid-template-columns: auto auto ;
+  grid-template-rows: auto auto auto;
+  grid-gap: 10px;
+  padding: 10px;
 }
 
-.search-pic {
-  height: 25px;
-  width: 25px;
-  margin-left: 25px;
-  margin-right: 15px;
+.Blog_frame1
+{   
+  display: grid;
+  grid-column: 1 / span 2;
+  grid-template-columns: 1fr 9fr;
+  grid-gap: 10px;
+  background-color: rgba(0,153,255,0.5);
 }
-.main-div {
-  padding-top: 50px;
-  padding-left: 100px;
-  padding-right: 100px;
-}
-
-.search-bar {
-  width: 90%;
-  height: 40px;
-  float: left;
+.Blog_frame2
+{
+  display: grid;
+  grid-template-columns: 2fr 8fr ;
+  grid-gap: 10px;
+  background-color: rgba(0,153,255,0.5);
 }
 
-.filter-button {
-  width: 10%;
-  height: 40px;
+.Blog_name
+{  
+  margin: 6px;
+  border-radius: 18px;
+  padding: 10px;
+  
+  color: white;
+  text-align: center;
+  background-color: hsl(185, 78%, 68%);
+  
+}
+.Blog_name2
+{
+  padding: 10px;
+  color: white;
+}
+
+.Comfirm{
+  display: grid;
+  grid-template-columns: auto auto ;
 }
