--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   margin-left: 25px;
   margin-right: 15px;
 }
-.main-div {
+.main-div-main {
   padding-top: 50px;
   padding-left: 100px;
   padding-right: 100px;
