--- a/src/components/section.css
+++ b/src/components/section.css
@@ -38,3 +38,22 @@
     padding-left: 100px;
     padding-right: 100px;
 }
+
+.main-div {
+    margin-top: 50px;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+.profile-page-pic{
+    height: 300px;
+    width: 300px;
+}
+
+.profile-info{
+    padding-left: 100px;
+}
+
+.show-blog{
+    margin-top: 20px;
+}
