--- a/src/components/section.css
+++ b/src/components/section.css
@@ -26,12 +26,14 @@
 }
 
 .button-addsection{
+    padding: 0px;
     width: 100%;
+    height: 40px;
 }
 
 .addsection{
-    height: 40px;
-    width: 40px;
+    height: 30x;
+    width: 30px;
 }
 .div-sectionname{
     padding-top: 50px;
@@ -55,5 +57,6 @@
 }
 
 .show-blog{
-    margin-top: 20px;
+    color: rgb(153, 153, 153);
+    border-bottom: rgba(0,0,0,.125) solid 1px;
 }
