--- a/src/css/blogforclick.css
+++ b/src/css/blogforclick.css
@@ -15,3 +15,10 @@
 .blogclick:hover{
     background-color: #DADADA;
 }
+.element{
+    width:100%;
+    height: 100%;
+    object-position: 50% 50%;
+    text-align: center;
+    padding-top:0.7em;
+}
