--- a/src/components/createblog_component/input.css
+++ b/src/components/createblog_component/input.css
@@ -10,8 +10,8 @@ input{
     display: grid;
     grid-template-columns: auto auto ;
     grid-template-rows: auto auto auto;
-    grid-gap: 25px;
-    padding: 150px;
+    grid-gap: 10px;
+    padding: 30px;
   }
   
   .Blog_frame1
@@ -55,5 +55,10 @@ input{
   .Comfirm{
     display: grid;
     grid-template-columns: auto auto ;
+  }
+
+  .header_word {
+    padding-top: 30px;
+    text-align: center;
   }
   
