--- a/src/App.css
+++ b/src/App.css
@@ -35,3 +35,29 @@
   border-bottom: 0px;
   border-radius: calc(0.25rem - 1px);
 }
+
+.show-blog{
+  padding: .75rem 1.25rem;
+  width: 100%;
+}
+
+.show-blog:hover{
+  background-color: rgb(163, 163, 163);
+  padding: .75rem 1.25rem;
+  width: 100%;
+  color: gray;
+}
+
+.card-header{
+  background-color: #343a40!important;
+  color: #fff;
+  font-size: 1.25rem;
+}
+
+.white-font{
+  color: white;
+}
+
+.black-font{
+  color:black;
+}
