--- a/src/App.css
+++ b/src/App.css
@@ -62,14 +62,33 @@
 }
 
 .show-all-blog:hover{
-  background-color: #343a40;
+  background-color: #6c7179;
   padding: .75rem 1.25rem;
   width: 100%;
   color: white;
 }
 
+.show-all-comment{
+  padding: .75rem 1.25rem;
+  width: 100%;
+  display:grid;
+  grid-template-columns: 1fr 3fr 1fr 2fr;
+  border-bottom: rgba(0,0,0,.125) solid 1px;
+  background-color: #fff;
+  color: black;
+  transform: 0.2;
+}
+
+.author-font{
+  color: black;
+}
+
+.author-font:hover{
+  color: white;
+}
+
 .card-header{
-  background-color: #343a40!important;
+  background-color: #6c7179!important;
   color: #fff;
   font-size: 1.25rem;
 }
