--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,12 @@
   margin-left: 15px;
 }
 
+.home-pic{
+  height: 25px;
+  width: 25px;
+  margin-right: 5px;
+}
+
 .search-pic {
   height: 25px;
   width: 25px;
