--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,16 @@
   border-radius: calc(0.25rem - 1px);
 }
 
+.show-nochapter{
+  padding: .75rem 1.25rem;
+  width: 100%;
+  border-bottom: rgba(0,0,0,.125) solid 1px;
+  background-color: rgb(229, 226, 226);
+  color: black;
+  transition: 0.4s;
+  text-align: center;
+}
+
 .show-all-blog{
   padding: .75rem 1.25rem;
   width: 100%;
