--- a/src/components/comment.css
+++ b/src/components/comment.css
@@ -1,15 +1,9 @@
-.input[type=text], select {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
+
+  .cont{
+    display: flex;
   }
-  
-  .input[type=submit] {
-    width: 100%;
+  .input {
+    width: 1000%;
     background-color: #4CAF50;
     color: white;
     padding: 14px 20px;
@@ -19,9 +13,7 @@
     cursor: pointer;
   }
   
-  .input[type=submit]:hover {
-    background-color: #45a049;
-  }
+
   .content_container{
       display:grid;
       grid-column: 7fr 2fr;
