--- a/src/components/section.css
+++ b/src/components/section.css
@@ -105,3 +105,21 @@
     margin-right: 100px;
     min-height: 250px;
 }
+
+.show-all-section{
+    padding: .75rem 1.25rem;
+    width: 100%;
+    display:grid;
+    grid-template-columns: 5fr 2fr;
+    border-bottom: rgba(0,0,0,.125) solid 1px;
+    background-color: rgb(229, 226, 226);
+    color: black;
+    transition: 0.4s;
+  }
+  
+  .show-all-section:hover{
+    background-color: #6c7179;
+    padding: .75rem 1.25rem;
+    width: 100%;
+    color: white;
+  }
