--- a/src/components/file.css
+++ b/src/components/file.css
@@ -17,3 +17,17 @@
     padding-left: 100px;
     padding-top: 20px;
 }
+
+.knowledge_button{
+    padding-left: 100px;
+    padding-top: 10px;
+}
+
+.review_button{
+    padding-left: 100px;
+    padding-top: 10px;
+}
+
+.editreview_button{
+    padding-left: 100px;
+}
