--- a/src/components/section.css
+++ b/src/components/section.css
@@ -41,6 +41,14 @@
     padding-right: 100px;
 }
 
+.div-section-content{
+    margin-top: 50px;
+    margin-left: 100px;
+    margin-right: 100px;
+    min-height: 500px;
+    background-color: rgb(153, 153, 153);
+}
+
 .main-div {
     margin-top: 50px;
     margin-left: 100px;
