--- a/src/components/showcontent/comment.css
+++ b/src/components/showcontent/comment.css
@@ -1,20 +1,25 @@
 
   .cont{
+    width: 100%;
+    height: 100%;
     display: flex;
+    float: right;
   }
-  .input {
-    width: 1000%;
-    background-color: #4CAF50;
-    color: white;
+  
+  .typecomment {
+    width: 100%;
+    color: none;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    
   }
-  
 
   .content_container{
       display:grid;
       grid-column: 7fr 2fr;
+      float: right;
   }
+
