--- a/src/components/section.css
+++ b/src/components/section.css
@@ -39,6 +39,7 @@
     padding-top: 50px;
     padding-left: 100px;
     padding-right: 100px;
+    
 }
 
 .div-section-content{
@@ -46,7 +47,8 @@
     margin-left: 100px;
     margin-right: 100px;
     min-height: 500px;
-    background-color: rgb(153, 153, 153);
+    background-color: white;
+    padding: 20px;
 }
 
 .main-div {
