--- a/src/style/readBlog.css
+++ b/src/style/readBlog.css
@@ -1,6 +1,8 @@
 .main-container{
     margin-left: 150px;
     margin-right: 150px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .bgcolor{
