update css & update filter

--- a/src/components/section.css
+++ b/src/components/section.css
@@ -141,3 +141,8 @@
       grid-template-columns: 1fr 1fr;
       width: 10%;
   }
+
+  .modal_file{
+      padding-left: 100px;
+      padding-top: 15px;
+  }
