--- a/src/components/editprofile.css
+++ b/src/components/editprofile.css
@@ -50,7 +50,13 @@
     justify-content: center;
     align-items: center;
 }
-
+.containerr{
+    display:grid;
+    grid-template-columns: 1fr 3fr;
+}
+.upload{
+    
+}
 .pic_input{
     display: flex;
     justify-content: center;
