--- a/src/App.css
+++ b/src/App.css
@@ -100,7 +100,7 @@
 }
 
 .card-header{
-  background-color: #6c7179!important;
+  background-color: #919191!important;
   color: #fff;
   font-size: 1.25rem;
 }
