--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,25 @@
   border-radius: calc(0.25rem - 1px);
 }
 
+.hot-kl-noborder-top{
+  margin-top: 50px;
+  margin-left: 100px;
+  margin-right: 100px;
+  border: rgba(0,0,0,.125) solid 1px;
+  border-bottom: 0px;
+  border-top: 0px;
+  border-radius: calc(0.25rem - 1px);
+}
+
+.hot-kl-no-margin{
+  border: rgba(0,0,0,.125) solid 1px;
+  border-bottom: 1px;
+  border-left: 0px;
+  border-right: 0px;
+  border-top: 0px;
+  border-radius: calc(0.25rem - 1px);
+}
+
 .show-nochapter{
   padding: .75rem 1.25rem;
   width: 100%;
