--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,15 @@
   margin-left: 100px;
   margin-right: 100px;
   border: rgba(0,0,0,.125) solid 1px;
+  border-top: 0px;
+  border-radius: calc(0.25rem - 1px);
+}
+
+.hot-kl-noborder-top-bottom{
+  margin-top: 50px;
+  margin-left: 100px;
+  margin-right: 100px;
+  border: rgba(0,0,0,.125) solid 1px;
   border-bottom: 0px;
   border-top: 0px;
   border-radius: calc(0.25rem - 1px);
