--- a/src/components/Section/writesection.css
+++ b/src/components/Section/writesection.css
@@ -1,3 +1,12 @@
 .min-h{
     height: 80px;
 }
+
+.hot-kl-noborder-top{
+    margin-top: 50px;
+    margin-left: 100px;
+    margin-right: 100px;
+    border: rgba(0,0,0,.125) solid 1px;
+    border-top: 0px;
+    border-radius: calc(0.25rem - 1px);
+  }
