--- a/src/components/DisandDel.css
+++ b/src/components/DisandDel.css
@@ -15,3 +15,9 @@
     justify-content: right;
     position: right;
 }
+
+.borderallfiles{
+  border: rgba(0,0,0,.125) solid 1px;
+  border-top: 0px;
+  border-radius: calc(0.25rem - 1px);
+}
