--- a/src/components/section.css
+++ b/src/components/section.css
@@ -36,9 +36,11 @@
     width: 30px;
 }
 .div-sectionname{
-    padding-top: 50px;
-    padding-left: 100px;
-    padding-right: 100px;
+    margin-top: 50px;
+    margin-left: 100px;
+    margin-right: 100px;
+    background-color: white;
+    font-size: 18px;
 }
 
 .editor{
@@ -46,9 +48,7 @@
 }
 
 .div-section-content{
-    margin-top: 50px;
-    margin-left: 100px;
-    margin-right: 100px;
+    font-size: 20px;
     min-height: 500px;
     background-color: white;
     padding: 16px;
