--- a/src/components/DisplayFile.css
+++ b/src/components/DisplayFile.css
@@ -1,9 +1,10 @@
-.container{
-    width:100%;
+.containerrr{
     display:grid;
     grid-template-columns: 3fr 1fr;
+    margin: 0em;
 }
 .icon{
     justify-items: right;
     text-align: right;
+    position: right;
 }
